--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "description": "Server",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.12.2",
-    "cookie-parser": "^1.3.3",
-    "cors": "^2.5.3",
-    "debug": "^2.1.3",
-    "express": "^4.12.3",
-    "jade": "^1.9.2",
-    "jsonwebtoken": "^4.2.2",
-    "moment": "^2.9.0",
-    "mongoose": "^4.0.1",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
+    "moment": "^2.12.0",
+    "mongoose": "^4.4.12",
     "mongoose-times": "^0.1.0",
-    "morgan": "^1.5.2",
-    "serve-favicon": "^2.2.0",
-    "stylus": "^0.42.3"
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-alpha3",
+    "serve-favicon": "^2.3.0",
+    "stylus": "^0.54.2"
+  },
+  "devDependencies": {
+    "typings": "^0.7.12"
   }
 }
