--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ausgaben-tracker-server",
+  "shortname": "ats",
   "version": "0.0.1",
   "main": "server.js",
   "private": true,
@@ -11,8 +12,10 @@
   "license": "MIT",
   "description": "Server",
   "dependencies": {
+    "any-promise": "^1.1.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "chalk": "^1.1.3",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "debug": "^2.2.0",
